<resources>
    <string name="app_name">QuizzApp</string>
    // TODO: 22/02/18
    <string name="home">Home</string>
    <string name="kelas">Kelas</string>
    <string name="rank">Rank</string>
    <string name="profile">Profile</string>
    <string name="kelas_1">Kelas 1</string>
    <string name="kelas_2">Kelas 2</string>
    <string name="kelas_3">Kelas 3</string>
    <string name="kelas_4">Kelas 4</string>
    <string name="kelas_5">Kelas 5</string>
    <string name="kelas_6">Kelas 6</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="level">Pilih Tingkat Kesulitan</string>
    <string name="time">00:58</string>
    <string name="question_ex">Di dalam kandang ada 17 ayam. Dijual paman 8. Paman membeli lagi 4.
    Jumlah ayam paman sekarang ada....</string>
    <string name="choose_answer">Pilih Jawaban</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="score">Skor Anda</string>
    <string name="hasil_kuis">Selamat Anda Telah Menyelesaikan Kuis</string>

</resources>