<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <!--Content Main-->

    <TextView
        android:id="@+id/time_view"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:padding="15dp"
        android:textSize="18sp"
        android:text="@string/time"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/question_example"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="14dp"
        android:padding="15dp"
        android:textSize="18sp"
        android:text="@string/question_ex"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/choose_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="270dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="110dp"
        android:padding="15dp"
        android:textSize="18sp"
        android:text="@string/choose_answer"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textAlignment="center"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.cardview.widget.CardView
            android:id="@+id/chooseA"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="350dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="70dp"
            android:background="@color/colorIcon"
            app:cardCornerRadius="15dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="A. 10"
                android:id="@+id/textA"
                android:paddingTop="10dp"
                android:textSize="20sp"
                android:textAlignment="center"
                android:background="@color/colorIcon"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/chooseB"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="350dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="0dp"
            android:background="@color/colorIcon"
            app:cardCornerRadius="15dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="A. 10"
                android:id="@+id/textB"
                android:paddingTop="10dp"
                android:textSize="20sp"
                android:textAlignment="center"
                android:background="@color/colorIcon"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.cardview.widget.CardView
            android:id="@+id/chooseC"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="420dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="70dp"
            android:background="@color/colorIcon"
            app:cardCornerRadius="15dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="A. 10"
                android:id="@+id/textC"
                android:paddingTop="10dp"
                android:textSize="20sp"
                android:textAlignment="center"
                android:background="@color/colorIcon"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/chooseD"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="420dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="0dp"
            android:background="@color/colorIcon"
            app:cardCornerRadius="15dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="A. 10"
                android:id="@+id/textD"
                android:paddingTop="10dp"
                android:textSize="20sp"
                android:textAlignment="center"
                android:background="@color/colorIcon"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:textAlignment="center"
        android:background="@color/colorIcon"
        android:text="next"
        android:id="@+id/next_soal"
        android:layout_marginTop="500dp"
        android:layout_marginStart="80dp">

    </Button>

</RelativeLayout>